templates/2k11/style.css
/* ... */
.serendipity_byline,
.serendipity_entry footer,
.serendipity_staticpage footer,
.serendipity_pagination,
.nocomments,
#trackback_url,
.manage_comments,
.serendipity_edit_nugget {
    color: #666;
    font-size: .8125em;
    line-height: 1.8462;
}

#staticpage_childpages,
.content ul,
.content ol { margin: 0 0 1em 2em; }

#staticpage_childpages li ul,
.content li ul,
.content li ol { margin: 0 0 0 2em; }

.serendipity_entryIcon {
    float: left;
    margin: 0 2em .625em 0;
}

.serendipity_entry table {
    border: 1px solid #aaa;
    display: inline-grid;
    max-width: 100%;
    width: auto;
    overflow: auto;
}

.serendipity_entry caption {
    font-size: .8125em;
    line-height: 1.8462;
    text-align: center;
}

.serendipity_entry th,
.serendipity_entry tfoot td { padding: .125em 1em; }

.serendipity_entry tbody td { padding: .1875em 1em; }

.serendipity_entry thead,
.serendipity_entry tfoot { background: #ddd; }

.serendipity_entry thead { border-bottom: 1px solid #aaa; }
.serendipity_entry tfoot { border-top: 1px solid #aaa; }

.serendipity_entry tbody tr:nth-child(even) { background: #eee; }

.geshi {
    font-family: monospace, monospace;
    _font-family: 'courier new', monospace;
}

.serendipity_entry .geshi,
.serendipity_entry pre {
    background: #eee;
    border: 1px solid #aaa;
    font-size: .875em;
    margin: 0 0 1.2308em;
    padding: .5385em;
    overflow: auto;
}

.serendipity_entry code,
.serendipity_entry kbd,
.serendipity_entry samp {
    font-size: .875em;
    line-height: 1.7143;
}

pre>code,
pre>kbd,
pre>samp,
pre .geshi {
    font-size: 1em;
    line-height: 1.5;
}

.serendipity_byline { margin: 0 0 1.2308em; }

.serendipity_pagination {
    clear: both;
    margin: 0 1.2308em 1.2308em;
}

.serendipity_pagination li {
    float: left;
    position: relative;
}

.serendipity_pagination .info {
    text-align: center;
    width: 100%;
}

.serendipity_pagination .prev,
.serendipity_pagination .next { width: 50%; }

.lt-ie8 .serendipity_pagination .prev,
.lt-ie8 .serendipity_pagination .next { width: 49.9%; }

.archives_date { min-width: 10em; }

.serendipity_comments { margin: 1em 0; }

.nocomments,
.serendipity_entry caption { font-style: italic; }

.serendipity_comment cite { font-style: normal; }

.serendipity_comment { margin: 0 0 1em; }
.serendipity_comment.odd {
    background-color: #EEE;
}
.serendipity_comment.even,
.serendipity_comment.odd {
    box-sizing: border-box;
    padding: .25em;
    border: 1px solid #DDD;
}
/*
.serendipity_comment_author_self {
    background: #FFFFF7;
    border: 1px solid #CCC;
    padding: .25em;
}
*/
.serendipity_comment_author_self header .pc-owner {
    background: #3e5f81e6;
    padding: .1em .25em;
    border-radius: 3px;
    color: #efefef;
    text-shadow: 1px 1px 2px #222;
}
.serendipity_comment h4 { margin: 0 0 .25em; }

.form_tarea,
.form_toolbar { margin-bottom: 1em; }

.form_field { margin-bottom: .5em; }

.serendipity_commentDirection {
    background-color: #eee;
    border: 1px solid #ddd;
    color: #aaa;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
}

#c0 { /* a new unsaved comment preview only */
    border: 1px solid #ddd;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
    padding: .625em;
}

.serendipity_commentDirection {
    color: #222;
    font-size: .8125em;
    line-height: 1.8462;
    margin: 0 0 1.2308em;
    max-width: 96%;
    padding: .3846em;
}

.serendipity_comment_captcha br {
    display: none;
    height: 0;
    visibility:hidden;
}

.serendipity_comment_captcha .captcha {
    border: 1px solid #aaa;
    margin: 1em 0;
}

.serendipity_comment_captcha label { margin: 0 0 .5em; }

#serendipity_comment_page {
    margin: auto .5em;
}
#serendipity_comment_page #serendipity_comment {
    margin-bottom: 1rem;
}

.comment_avatar {
    border: 1px solid #aaa;
    float: left;
    margin: 0 .625em .625em 0;
    padding: 0!important;
    overflow: hidden;
}

.avatar_left {
    float: left;
    margin: 0 .625em .625em 0;
}

.avatar_right {
    float: right;
    margin: 0 0 .625em .625em;
}

.comment_content ul {
    list-style-position: outside;
    margin-left: 1.5em;
}
.serendipity_subscription_on,
.serendipity_subscription_pending,
.serendipity_subscription_off {
    color: #b22222;
    background-color: #f0f8ff;
    padding: 1px 2px;
}
.serendipity_subscription_off {
    display: none;
    visibility: hidden;
}

#colophon p,
.staticpage_metainfo p {
    border-top: 1px solid #ccc;
    color: #666;
    display: block;
    padding: .9167em 0 1em;
}

#colophon p {
    font-size: .8125em;
    padding: .9167em 1.2308em 1em;
}

#colophon i {
    font-style: normal;
}

.serendipity_center {
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

.serendipity_msg_important,
.serendipity_msg_success,
.serendipity_msg_notice {
    font-size: .8125em;
    line-height: 1.8462;
    padding: .3846em;
    text-shadow: 0 1px 0 rgba(255,255,255,.5);
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
}

.serendipity_msg_important {
    background: #f2dede;
    border: 1px solid #eed3d7;
    color: #b94a48;
}

.serendipity_msg_success {
    background: #dff0d8;
    border: 1px solid #d6e9c6;
    color: #468847;
}

.serendipity_msg_notice {
    background: #d9edf7;
    border: 1px solid #bce8f1;
    color: #3a87ad;
}

/* If the basic styles for aligning images are changed, the changes
   must be ported to htmlarea/wysiwyg-style.css as well. */
.serendipity_image_left,
.serendipity_image_right,
.serendipity_image_center,
.serendipity_imageComment_center,
.serendipity_imageComment_left,
.serendipity_imageComment_right {
    background: transparent;
    border: 0 none;
    padding: 0!important;
}

.serendipity_image_left,
.serendipity_image_right,
.serendipity_imageComment_left,
.serendipity_imageComment_right {
    display: block;
    float: none;
    margin: 0 0 1em;
}
/* ... */

